TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
WISH: keymap modification via esc-sequences.
WISH: searchable backlog
WISH: meta-tagging of data by regex/master process (my dream project)
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: just for fun, do shade and tint with XRender.

6.0  Sat Dec 24 13:58:56 CET 2005
	- make it compile without SMART_RESIZE again.
        - enable slow link support by default.
        - fix relative cursor-positioning not respecting scrolling regions
          (also a bug in original rxvt).
        - initialize termios structure to zero when fetching it fails
          (see http://www.freebsd.org/cgi/query-pr.cgi?pr=84647 for a
          partial patch).
        - bump max columns/rows to 10000 each.
        - bump max savelines to 10000000.
        - -pty-fd now passes the urxvtc fd to the urxvtd process.
        - avoid linking against -lnsl/-lsocket/-lxpg4 unless neccessary.
        - major code cleanup (still not complete, though).
        - implement -hold option.
        - _major_ rewrite of internal buffer handling:
	- re-flow on resize, lines get wrapped instead of winged.
	- circular line buffer (substantially speeds up scrolling).
        - slightly less code + data memory usage per terminal.
	- slight overall speed improvements.
        - considerably improved code clarity.
        - partial-screen scrolls no longer end up in the scrollback
          buffer.

5.9  Sat Dec 17 21:53:17 CET 2005
	- fix a bug in the menu code of unknown impact, found by darix.
        - clean up signal handling to be global, not per terminal
          (matters only for rxvtd).
        - fix small typoe in rxvt.1 (found by Mike Fabian).
        - don't crash when broken xft/fontconfig/freetype versions return
          bogus data, ignore the xft font instead (experienced on suse).

5.8  Tue Oct 25 22:21:45 CEST 2005